changed url in index.html file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
     <h1>Adventures in Fire Island</h1>
-    img src="https://assets.simpleviewinc.com/sv-longisland/image/upload/c_fill,f_avif,h_800,q_65,w_1920/v1/cms_resources/clients/longisland/https_www_discoverlongisland_com_towns_and_regions_fire_island__550e94d4-1c6b-487b-95e6-577b97dd6bd0.jpg" alt="Fire Island Escapades" width="100%">
+    img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQOA0bDYIa57TwzRBfjl_Yp2GSdOZM-PHurw&s" alt="Fire Island Escapades">
     </header>
     <section>
         <h2>My Experience in Fire Island</h2>
