--- a/index.html
+++ b/index.html
@@ -8,24 +8,31 @@
 <body>
     <header>
     <h1>Adventures in Fire Island</h1>
-    img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQOA0bDYIa57TwzRBfjl_Yp2GSdOZM-PHurw&s" alt="Fire Island Escapades">
+    <Img src="Images/Adventure Island Hero section.jpg" alt="Fire Island Escapades" width="100%" height="80%">
     </header>
     <section>
-        <h2>My Experience in Fire Island</h2>
-        <p>
-            Visiting Fire Island was an unforgettable adventure filled with sandy trails,
-            peaceful beaches, and incredible wildlife. From walking through the Sunken Forest 
-            to watching the sunset near the lighthouse, every moment felt magical. It’s the 
-            perfect escape for nature lovers and explorers!
-        </p>
-    </section>
-    <section>
-        <h2>Gallery: Fire Island</h2>
-        <ul>
-        <li>img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkMm5e4_UIbt7mRuwt02jRVJ3SlHa3qKk_7w&s" alt="Beach fun image"></li>
-        <li>Img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRnwqhn5da2-Hf_RX3VS_SIa2laBhcBrpse8w&s" alt="island fun"></li>
-        <li>Img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQe-L9urOki-eTKmfn-u3vZqOF24y1ys2gv3Q&s" alt="camping in island"></li>
-        </ul>
+       <h2>Gallery: Fire Island</h2>
+
+<ul style="list-style:none; padding:0; margin:0; display:flex;">
+    <li style="flex:1; margin-right:10px;">
+        <img src="Images/img 1 fireisland.jpg" 
+             alt="Beach fun image" 
+             style="width:100%; height:200px; object-fit:cover;">
+    </li>
+
+    <li style="flex:1; margin-right:10px;">
+        <img src="Images/img 2 fireisland.jpg" 
+             alt="island fun" 
+             style="width:100%; height:200px; object-fit:cover;">
+    </li>
+
+    <li style="flex:1;">
+        <img src="Images/image 3 fireisland.jpg" 
+             alt="camping in island" 
+             style="width:100%; height:200px; object-fit:cover;">
+    </li>
+</ul>
+
     </section>
     <section>
         <h3>Explore the Adventure!</h3>
